--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -315,54 +315,15 @@ anti-duplication:
 # 这样玩家购买商品时会自动给其手持的魔法方块增加次数
 # 注意：玩家购买时必须手持魔法方块，否则命令会失败
 
-# 性能设置
-# -------------------------------------------------------------
-# 这些设置有助于为高流量服务器优化插件性能
-# ✅ 热重载：大多数性能设置使用 /mb reload 立即生效
+# =============================================================================
+# 性能优化设置
+# =============================================================================
+# 建议保持默认值，除非你完全了解其作用
 
 performance:
-  # 描述缓存设置
-  lore-cache:
-    # 启用描述缓存以减少字符串操作（推荐：true）
-    enabled: true
-    # 缓存持续时间（毫秒）（默认：5000 = 5秒）
-    duration: 5000
-    # 清理前的最大缓存大小（默认：1000）
-    max-size: 1000
-
-  # 魔法方块检测的位置缓存设置
-  location-cache:
-    # 启用位置缓存以提高魔法方块检测性能（推荐：true）
-    # ✅ 热重载：使用 /mb reload 立即生效
-    enabled: true
-    # 缓存持续时间（毫秒）（默认：5000 = 5秒）
-    duration: 5000
-    # 缓存清理间隔（秒）（默认：30）
-    cleanup-interval: 30
-
-  # 方块物理优化
   physics-optimization:
-    # 启用智能物理事件过滤以减少不必要的检查（推荐：true）
-    # ✅ 热重载：使用 /mb reload 立即生效
-    enabled: true
-    # 跳过不太可能受影响的方块的物理检查（推荐：true）
-    skip-unaffected-blocks: true
-
-  # 统计保存设置
-  statistics:
-    # 批量保存阈值 - 在这么多操作后保存（默认：50）
-    # ✅ 热重载：使用 /mb reload 立即生效
-    batch-threshold: 50
-    # 自动保存间隔（毫秒）（默认：30000 = 30秒）
-    save-interval: 30000
-
-  # 数据库优化
-  database-optimization:
-    # 使用异步数据库操作以防止主线程阻塞（推荐：true）
-    # ✅ 热重载：使用 /mb reload 对新操作生效
-    async-operations: true
-    # 批量数据库更新以减少 I/O 操作（推荐：true）
-    batch-updates: true
+    enabled: true                    # 启用物理事件过滤
+    skip-unaffected-blocks: true     # 跳过不受物理影响的方块
 
 # 数据库设置
 # -------------------------------------------------------------
