--- a/src/main/resources/config_en.yml
+++ b/src/main/resources/config_en.yml
@@ -318,54 +318,19 @@ anti-duplication:
 # This way players automatically get uses added to their held magic block when purchasing
 # Note: Players must be holding a magic block when purchasing, otherwise the command will fail
 
-# Performance Settings
-# -------------------------------------------------------------
-# These settings help optimize plugin performance for high-traffic servers
-# ✅ Hot-reloadable: Most performance settings take effect immediately with /mb reload
+# =============================================================================
+# Performance Optimization Settings
+# =============================================================================
+# ⚡ These settings have been professionally optimized with recommended values
+# 📌 Keep defaults unless you fully understand their purpose
 
 performance:
-  # Lore caching settings
-  lore-cache:
-    # Enable lore caching to reduce string operations (recommended: true)
-    enabled: true
-    # Cache duration in milliseconds (default: 5000 = 5 seconds)
-    duration: 5000
-    # Maximum cache size before cleanup (default: 1000)
-    max-size: 1000
-
-  # Location caching settings for magic block detection
-  location-cache:
-    # Enable location caching to improve magic block detection performance (recommended: true)
-    # ✅ Hot-reloadable: Changes take effect immediately with /mb reload
-    enabled: true
-    # Cache duration in milliseconds (default: 5000 = 5 seconds)
-    duration: 5000
-    # Cache cleanup interval in seconds (default: 30)
-    cleanup-interval: 30
-
-  # Block physics optimization
+  # Physics event intelligent filtering - Prevents server lag from massive physics events
+  # Mechanism: Uses 3-layer indexing (world→chunk→location) to quickly filter irrelevant events
+  # ✅ Hot-reloadable: Changes take effect immediately with /mb reload
   physics-optimization:
-    # Enable smart physics event filtering to reduce unnecessary checks (recommended: true)
-    # ✅ Hot-reloadable: Changes take effect immediately with /mb reload
-    enabled: true
-    # Skip physics checks for blocks that are unlikely to be affected (recommended: true)
-    skip-unaffected-blocks: true
-
-  # Statistics saving settings
-  statistics:
-    # Batch save threshold - save after this many operations (default: 50)
-    # ✅ Hot-reloadable: Changes take effect immediately with /mb reload
-    batch-threshold: 50
-    # Auto-save interval in milliseconds (default: 30000 = 30 seconds)
-    save-interval: 30000
-
-  # Database optimization
-  database-optimization:
-    # Use async database operations to prevent main thread blocking (recommended: true)
-    # ✅ Hot-reloadable: Changes take effect for new operations with /mb reload
-    async-operations: true
-    # Batch database updates to reduce I/O operations (recommended: true)
-    batch-updates: true
+    enabled: true                    # Enable physics event filtering (strongly recommended)
+    skip-unaffected-blocks: true     # Skip unaffected blocks (strongly recommended)
 
 # Database Settings
 # -------------------------------------------------------------
